syntax = "proto3";
option go_package = "backend/internal/marketplace";

message Config {

  message ApplicationConfig {
    string GithubToken = 1;
  }

  message NetworkConfig {
    repeated string publicsubnets = 1;
    repeated string privatesubnets = 2;
  }

  ApplicationConfig applicationConfig = 1;
  NetworkConfig networkConfig = 2;

}

message Parameters {

  message Parameter {
    string value = 2;
    string type = 3;
    bool tracked = 4;
    bool insync = 5;
  }
  map<string, Parameter> parameterlist = 1;
}